fix(utils): add compat aliases for flex grow, shrink and basis

--- a/packages/utils/scss/flex-grid/_flex-basis.scss
+++ b/packages/utils/scss/flex-grid/_flex-basis.scss
@@ -11,3 +11,4 @@
 $kendo-utils-flex-basis: map-get( $kendo-utils, "flex-basis" ) !default;
 
 @include generate-utils( basis, flex-basis, $kendo-utils-flex-basis );
+@include generate-utils( flex-basis, flex-basis, $kendo-utils-flex-basis );
