fix(signature): large signature should retain size when drawing

--- a/packages/fluent/scss/signature/_layout.scss
+++ b/packages/fluent/scss/signature/_layout.scss
@@ -65,4 +65,8 @@
         }
     }
 
+    .k-signature-lg {
+        min-height: var( --kendo-signature-lg-min-height, #{$kendo-signature-lg-min-height} );
+    }
+
 }
