--- a/packages/utils/scss/flex-grid/_grid-column-start-end.scss
+++ b/packages/utils/scss/flex-grid/_grid-column-start-end.scss
@@ -13,3 +13,4 @@ $kendo-utils-grid-column-end: map-get( $kendo-utils, "grid-column-end" ) !defaul
 $kendo-utils-grid-column-span: map-get( $kendo-utils, "grid-column-span" ) !default;
 
 @include generate-utils( col-span, grid-column, $kendo-utils-grid-column-span );
+@include generate-utils( colspan, grid-column, $kendo-utils-grid-column-span );
