fix(input): set focus border color to transparent when fillMode is none

--- a/packages/fluent/scss/input/_theme.scss
+++ b/packages/fluent/scss/input/_theme.scss
@@ -26,7 +26,7 @@
             --INTERNAL--kendo-input-border: var( --kendo-input-focus-border );
 
             &::after {
-                border-color: var( --kendo-input-focus-border );
+                border-color: var( --kendo-input-focus-border, transparent );
             }
         }
 
