--- a/packages/fluent/scss/menu/_theme.scss
+++ b/packages/fluent/scss/menu/_theme.scss
@@ -81,6 +81,8 @@
             &:focus-visible,
             &.k-focus {
 
+                outline-color: transparent;
+
                 > .k-link {
                     outline-color: var( --kendo-menu-popup-item-focus-outline, #{$kendo-menu-popup-item-focus-outline} );
                 }
