chore: improve disabled styling in fluent

--- a/packages/fluent/scss/calendar/_theme.scss
+++ b/packages/fluent/scss/calendar/_theme.scss
@@ -30,6 +30,12 @@
             &.k-focus {
                 color: var( --kendo-calendar-today-nav-hover-text, #{$kendo-calendar-today-nav-hover-text});
             }
+
+            &.k-disabled {
+                @include disabled(
+                    $color: var( --kendo-disabled-text, inherit )
+                );
+            }
         }
 
 
