fix(colorpalette): adjust disabled state to match fluent design

--- a/packages/fluent/scss/colorpalette/_layout.scss
+++ b/packages/fluent/scss/colorpalette/_layout.scss
@@ -21,6 +21,10 @@
         *::after {
             box-sizing: border-box;
         }
+
+        &.k-disabled {
+            opacity: .3;
+        }
     }
 
     // Table
