feat(filter): add focus styles

--- a/packages/bootstrap/scss/filter/_variables.scss
+++ b/packages/bootstrap/scss/filter/_variables.scss
@@ -9,3 +9,5 @@ $filter-operator-dropdown-width: 15em !default;
 
 $filter-preview-field-text: $primary !default;
 $filter-preview-operator-text: $subtle-text !default;
+
+$filter-toolbar-focus-shadow: 0 0 0 .25rem rgba( $primary, .25 ) !default;
