--- a/packages/default/scss/filter/_theme.scss
+++ b/packages/default/scss/filter/_theme.scss
@@ -18,6 +18,12 @@
         .k-filter-lines .k-filter-item:last-child > * > .k-filter-toolbar::after {
             background-color: $component-border;
         }
+
+        // Focus
+        .k-toolbar:focus,
+        .k-toolbar.k-focus {
+            @include box-shadow( $filter-toolbar-focus-shadow );
+        }
     }
 
 }
