--- a/packages/material/scss/filter/_variables.scss
+++ b/packages/material/scss/filter/_variables.scss
@@ -9,3 +9,5 @@ $filter-operator-dropdown-width: 15em !default;
 
 $filter-preview-field-text: $primary !default;
 $filter-preview-operator-text: $subtle-text !default;
+
+$filter-toolbar-focus-shadow: 0 2px 4px -1px rgba(0, 0, 0, .2), 0 4px 5px rgba(0, 0, 0, .14), 0 1px 10px rgba(0, 0, 0, .12) !default;
