--- a/packages/bootstrap/scss/toolbar/_variables.scss
+++ b/packages/bootstrap/scss/toolbar/_variables.scss
@@ -25,3 +25,5 @@ $toolbar-shadow: null !default;
 $toolbar-separator-border: inherit !default;
 
 $toolbar-input-width: 10em !default;
+
+$toolbar-item-shadow: 0 0 0 .25rem rgba( $primary, .25 ) !default;
