--- a/packages/default/scss/toolbar/_variables.scss
+++ b/packages/default/scss/toolbar/_variables.scss
@@ -25,3 +25,5 @@ $toolbar-shadow: null !default;
 $toolbar-separator-border: inherit !default;
 
 $toolbar-input-width: 10em !default;
+
+$toolbar-item-shadow: $kendo-button-focus-shadow !default;
