--- a/packages/material/scss/toolbar/_variables.scss
+++ b/packages/material/scss/toolbar/_variables.scss
@@ -25,3 +25,5 @@ $toolbar-shadow: $box-shadow-depth-2 !default;
 $toolbar-separator-border: $component-border !default;
 
 $toolbar-input-width: 10em !default;
+
+$toolbar-item-shadow: 0 2px 4px -1px rgba(0, 0, 0, .2), 0 4px 5px rgba(0, 0, 0, .14), 0 1px 10px rgba(0, 0, 0, .12) !default;
