--- a/packages/fluent/scss/timeselector/_variables.scss
+++ b/packages/fluent/scss/timeselector/_variables.scss
@@ -35,6 +35,9 @@ $kendo-time-selector-header-padding-y: map-get( $kendo-spacing, 3 ) !default;
 /// @group time-selector
 $kendo-time-selector-header-border-width: 0px !default;
 
+/// Visibility of the time-selector separator.
+/// @group time-selector
+$kendo-time-list-separator-display: none;
 /// Minimum width of the time-selector columns.
 /// @group time-selector
 $kendo-time-list-width: 4em !default;
