fix(grid): add k-reorder-cue as k-grouping-dropclue alias

--- a/packages/fluent/scss/grid/_layout.scss
+++ b/packages/fluent/scss/grid/_layout.scss
@@ -353,6 +353,10 @@
         }
     }
 
+    // Alias used in jQuery
+    .k-reorder-cue {
+        @extend .k-grouping-dropclue;
+    }
 
     // Grid header / footer
     .k-grid-header-wrap,
