--- a/packages/fluent/scss/calendar/_theme.scss
+++ b/packages/fluent/scss/calendar/_theme.scss
@@ -185,6 +185,7 @@
             --kendo-calendar-cell-bg: var( --kendo-calendar-range-bg, #{$kendo-calendar-range-bg} );
             --kendo-calendar-cell-text: var( --kendo-calendar-range-text, #{$kendo-calendar-range-text} );
             --kendo-calendar-cell-link-bg: transparent;
+            --kendo-calendar-cell-selected-bg: transparent;
             --kendo-calendar-cell-selected-shadow: none;
 
             &::before {
