--- a/packages/fluent/scss/color-preview/_layout.scss
+++ b/packages/fluent/scss/color-preview/_layout.scss
@@ -49,6 +49,7 @@
     // Color Preview Mask
     .k-color-preview-mask {
         width: 100%;
+        min-width: var( --kendo-icon-size, 1rem );
         height: 100%;
         position: relative;
     }
